@@ -136,6 +136,7 @@ Improvements:
    * Popup: Support "language,changed" smart callback.
    * Add hide effect for notify.
    * Widget: Improve performance in applying widget theme. It prevents applying themes more strictly if it tries to apply same theme. This increases the performance hugely in case that user applies a specific theme to the window object.
+   * Flip now sets the focus to it's content object when flip go to is called while flip is focused.
 
 Fixes:
    * Now elm_datetime_field_limit_set() can set year limits wihtout problems.
